# windows_pen_tablet_rust

./: Cargo.toml  readme.md
test_print_type_sizes/: Cargo.toml  bitfield_design.ipynb  log_analysis.ipynb  visualise_type_sizes.ipynb
test_print_type_sizes/notebook/: bitfield_design.ipynb  custom_types.py  visualise_type_sizes.ipynb
test_print_type_sizes/src/: main.rs
test_windows_pointer_api/: Cargo.toml
test_windows_pointer_api/src/: main.rs
test_winit_with_octotab/: Cargo.toml
test_winit_with_octotab/src/: main.rs
test_winit_with_octotablet/: Cargo.toml
test_winit_with_octotablet/src/: main.rs
test_wintab_lite_with_libloading/: Cargo.toml
test_wintab_lite_with_libloading/src/: main.rs
test_wintab_with_bindgen/: .gitignore  Cargo.toml  build.rs
test_wintab_with_bindgen/src/: main.rs  wintab32_extra_impl.rs
test_wintab_with_bindgen/src/wintab32_headers/: wrapper.h
windows_direct/: Cargo.toml
windows_direct/src/: main.rs
winit_and_octotab/: Cargo.toml
winit_and_octotab/src/: main.rs
wintab_lite/: Cargo.toml  readme.md
wintab_lite/examples/wintab_libloading/: Cargo.toml  readme.md
wintab_lite/src/: axis.rs  bitmask.rs  c_string_types.rs  c_type_aliases.rs  cstring_types.rs  extern_function_types.rs  information_categories.rs  lib.rs  log_context.rs  packet.rs  wrapper.rs  wtpkt.rs
wintab_test/: Cargo.toml  build.rs
wintab_test/src/: main.rs  wintab32_extra_impl.rs
wintab_winit/: Cargo.toml  readme.md
wintab_winit/src/: main.rs
wintab_wrapper/: Cargo.toml
wintab_wrapper/src/: lib.rs  log_context.rs  wtpkt.rs
(+7 files in other folders)
