[package]
name = "test_windows_pointer_api"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies.windows]
version = "0.54.0"
features = [
        "Win32_Graphics_Gdi",
        "Win32_System_LibraryLoader",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Input",
        "Win32_UI_Input_Pointer"
]

