[package]
name = "test_wintab_lite_with_libloading"
version = "0.1.0"
edition = "2021"

[dependencies]
wintab_lite = {version = "1.0.1", features = ["libloading"]}
windows ={version ="0.56.0", features=["Win32", "Win32_Graphics_Gdi"]}
winit="0.29.15"
anyhow="1.0.82"
libloading = {version = "0.8.3"}
